# VL-RLHF

./: .gitignore  .pre-commit-config.yaml  README.md  auto_load.py  data_utils.py  dpo.py  dpo_trainer.py  llava_dpo.py  merge_peft_model.py  model.py  ppo.py  pyproject.toml  requirements.txt  requirements.yml  reward_modeling.py  run_dpo.sh  sft.py
accelerate_config/: config.yaml  ddp.yaml  infer.yaml  zero2.yaml  zero3.yaml
assets/: draw_radar_chart.ipynb
components/: collator.py  dpo_trainer.py  model.py  ppo_trainer.py  processor.py  rm_trainer.py  sft_trainer.py
docs/: CustomizedModel.md  EvaluationGuide.md  TrainingArguments.md
eval/: eval_rm.py
eval/captioning/: generate.py
eval/mmbench/: eval.py
eval/mme/: convert_answer_to_mme.py  eval.py
eval/mmhal/: eval.py
eval/mmvet/: eval.py
extra/GroundingDINO/groundingdino.egg-info/: SOURCES.txt
extra/HalDetector/Woodpecker/: gradio_demo.py  infer.sh  inference.py  intermediate_view.json  vis_corrector.py
scripts/: config.sh  ddpo_instructblip.sh  ddpo_llava.sh  ddpo_qwenvl.sh  dpo_instructblip.sh  dpo_internlmxc2vl7b.sh  dpo_llava.sh  dpo_llavanext.sh  dpo_qwenvl.sh  kto_instructblip.sh  kto_llava.sh  kto_llavanext.sh  kto_qwenvl.sh  launch_vllm_server.sh  ppo_qwenvl.sh  rm_qwenvl.sh  sft_instructblip.sh  sft_llava.sh  sft_llavanext.sh  sft_qwenvl.sh
scripts/eval/: captioning.sh  config.sh  eval_all.sh  eval_rm.sh  mathvista.sh  mmbench.sh  mmbench_sgl.sh  mme.sh  mme_sgl.sh  mmhal.sh  mmmu.sh  mmvet.sh  mmvet_sgl.sh  mysql_backup.sh  pope.sh  pope_sgl.sh  seedbench.sh  seedbench_generate.sh  seedbench_sgl.sh  vlrlhf.sql  vqa.sh
src/Woodpecker/: batch_infer.py  gradio_demo.py  infer.sh  multi_gpu.py  vis_corrector.py
src/Woodpecker/mmGD_config/: grounding_dino_swin-t_pretrain_obj365.py
src/Woodpecker/models/: answerer.py  claim_generator.py  detector.py  entity_extractor.py  preprocessor.py  questioner.py  refiner.py  utils.py
src/hdbench/: eval.py
src/hdbench/data/: hdbench_cleaned.json  hdbench_final.json
src/vlrlhf/: dpo.py  merge_peft_model.py  ppo.py  reward_modeling.py  sft.py
src/vlrlhf/base/: model.py  (+4 more)
utils/: auto_load.py  common.py  data.py
(+61 files in other folders)
